--- a/package.json
+++ b/package.json
@@ -25,5 +25,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
+  },
+  "dependencies": {   
   }
 }
