--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "type": "git",
     "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
   },
-  "dependencies": {   
+  "dependencies": {
+    "gulp-inject": "^4.2.0",
+    "gulp-remove-empty-lines": "0.0.8",
+    "gulp-replace": "^0.5.4"
   }
 }
